admin and user styling interface done

--- a/Client/src/app/app.component.html
+++ b/Client/src/app/app.component.html
@@ -1,6 +1,10 @@
 <app-navigation-bar></app-navigation-bar>
-<!-- <app-login></app-login>
-<app-signup></app-signup> -->
+<!-- <app-login></app-login> -->
+<!-- <app-signup></app-signup> -->
 
 
-<app-cards></app-cards>
+<!-- <app-cards></app-cards> -->
+<app-admin-navigation-bar></app-admin-navigation-bar>
+
+<app-users-list></app-users-list>
+<!-- <app-products-list></app-products-list> -->
