--- a/Client/src/app/components/cards/cards.component.html
+++ b/Client/src/app/components/cards/cards.component.html
@@ -10,7 +10,7 @@
                                 <p class="display-30">The Titan Easy-On Prong Training Collar is the perfect tough, safe and effective training collar for your willful dog. This chrome-plated collar features a nylon loop for optimum durability and strength, and will not tarnish, rust or break.</p>
                                 <div class="meta meta-style2">
                                     <ul>
-                                        <li><a href="#!">Add to cart</a></li>
+                                        <button> add to cart</button> 
                                         <li><a href="#!">Price</a></li>
                                     </ul>
                                 </div>
