--- a/Client/src/app/components/navigation-bar/navigation-bar.component.html
+++ b/Client/src/app/components/navigation-bar/navigation-bar.component.html
@@ -1,4 +1,4 @@
-<nav class="navbar navbar-expand-lg bg-body-tertiary">
+<nav class="navbar navbar-expand-lg navbar-custom ">
     <div class="container-fluid">
       <a class="navbar-brand" href="#">
         <i class="fa fa-paw" aria-hidden="true"></i> Pet-Store
@@ -34,14 +34,22 @@
         </ul>
       </div>
       <div class="d-flex justify-content-start flex-grow-1">
-        <form class="form-inline ">
-          <div class="input-group">
-            <input type="text" class="form-control rounded-pill" style="width: 300px;" placeholder="Search for pets" aria-label="Search" aria-describedby="search">
-            <div class="input-group-append">
-              <button class="btn btn rounded-circle" type="button"><i class="fa fa-search"></i></button>
-            </div>
+        <form id="search-form">
+          <div class="row">
+              <div class="col-12">
+                  <div class="row no-gutters">
+                      <div class="col-lg-8 col-md-6 col-sm-12 p-0">
+                          <input type="text" placeholder="Search..." class="form-control" id="search" name="search">
+                      </div>
+                      <div class="col-lg-1 col-md-3 col-sm-12 p-0">
+                          <button type="submit" class="btn btn-base">
+                              <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="feather feather-search"><circle cx="11" cy="11" r="8"></circle><line x1="21" y1="21" x2="16.65" y2="16.65"></line></svg>
+                          </button>
+                      </div>
+                  </div>
+              </div>
           </div>
-        </form>
+      </form>
       </div>
       <ul class="navbar-nav ml-auto">
         <li class="nav-item">
