--- a/Client/src/app/app.component.html
+++ b/Client/src/app/app.component.html
@@ -1,7 +1,9 @@
-<app-cart></app-cart>
-<app-navigation-bar></app-navigation-bar>
-<!-- <app-login></app-login>
-<app-signup></app-signup> -->
+<!-- <app-cards></app-cards>
+//<app-navigation-bar></app-navigation-bar>
+//<app-login></app-login>
+//<app-signup></app-signup>
 
 
-<app-cards></app-cards>
+<app-cards></app-cards> -->
+<!-- //<app-cart></app-cart> -->
+<app-product-list></app-product-list>
