added post-details component

--- a/Client/src/app/components/product-list/product-list.component.html
+++ b/Client/src/app/components/product-list/product-list.component.html
@@ -2,20 +2,20 @@
   <div class="d-flex flex-column text-center bg-white mb-2 p-3 p-sm-5">
     <h3 class="flaticon-house display-3 font-weight-normal text-secondary mb-3">
       <img
-        [src]="item.imageUrl"
+        [src]="product.imageUrl"
         alt=""
         class="productImage"
         (click)="toggleModal()"
       />
     </h3>
-    <h3 class="title mb-3" (click)="toggleModal()">{{ item.name }}</h3>
-    <p>{{ item.description.substring(0, 93) }}...</p>
-    <p class="price">${{ item.price }}</p>
+    <h3 class="title mb-3" (click)="toggleModal()">{{ product.name }}</h3>
+    <p>{{ product.description.substring(0, 93) }}...</p>
+    <p class="price">${{ product.price }}</p>
   </div>
   <div *ngIf="modal" class="modal-custom">
     <div class="overlay" (click)="toggleModal()"></div>
     <div class="modal-content-custom">
-      <!-- <app-product-details [selectedProduct]="item"></app-product-details> -->
+      <app-product-details [selectedProduct]="product"></app-product-details>
       <button
         class="close-modal-custom btn btn-lg btn-primary px-3 d-none d-lg-block"
         (click)="toggleModal()"
