--- a/Client/src/app/app.component.html
+++ b/Client/src/app/app.component.html
@@ -1,7 +1,6 @@
 <app-navigation-bar></app-navigation-bar>
 <!-- <app-login></app-login>
  -->
- <app-signup></app-signup>
-
+<app-home-page></app-home-page>
 
 <!-- <app-cards></app-cards> -->
