--- a/Client/src/app/components/home-page/home-page.component.html
+++ b/Client/src/app/components/home-page/home-page.component.html
@@ -6,6 +6,6 @@
 <div class="row pb-3">
   <app-product-list
     *ngFor="let product of products"
-    [item]="product"
+    [product]="product"
   ></app-product-list>
 </div>
