--- a/Client/src/app/app.component.html
+++ b/Client/src/app/app.component.html
@@ -1,16 +1,13 @@
-<!-- <app-cards></app-cards>
-//<app-navigation-bar></app-navigation-bar>
-//<app-login></app-login>
-//<app-signup></app-signup>
 
 
-<app-cards></app-cards> -->
-<!-- //<app-cart></app-cart> -->
+
+
+<!-- <app-cards></app-cards> --> 
+
 <app-product-list></app-product-list>
-<app-navigation-bar></app-navigation-bar>
+<!-- <app-navigation-bar></app-navigation-bar> -->
 <!-- <app-login></app-login>
  -->
- <app-signup></app-signup>
+ <!-- <app-signup></app-signup> -->
 
 
-<!-- <app-cards></app-cards> -->
