--- a/Client/src/app/components/product-list/product-list.component.css
+++ b/Client/src/app/components/product-list/product-list.component.css
@@ -223,3 +223,37 @@ a, a:active, a:focus {
 .mt-6, .my-6 {
     margin-top: 3.5rem;
 }
+.blog-grid-img {
+    position: relative;
+    overflow: hidden;
+  }
+
+ 
+.blog-grid-img img {
+    width: 100%;
+    height: 300px; 
+    object-fit: contain;
+  }
+  
+  
+  .img-container {
+    width: 100%;
+    height: 300px; 
+    background-position: center;
+    
+
+  }
+  .checkout-button {
+    background-color: rgb(255, 192, 231);
+    color: #fff;
+    
+    padding: 10px 20px;
+   
+    cursor: pointer;
+    margin: auto;
+    align-items: center;
+    display: flex;
+    display:grid;
+    justify-content: center;
+  }
+  
