--- a/Client/src/app/app.component.html
+++ b/Client/src/app/app.component.html
@@ -1,8 +1,8 @@
 <!-- <app-navigation-bar></app-navigation-bar>
-<app-login></app-login>
-<app-signup></app-signup> -->
-
-<!-- <router-outlet></router-outlet> -->
+ -->
+ <!-- <app-login></app-login>
+ <app-signup></app-signup> -->
+<router-outlet></router-outlet>
 <!-- <app-cards></app-cards> -->
 <!-- <app-admin-navigation-bar></app-admin-navigation-bar> -->
 
