--- a/Client/src/app/admin-components/users-list/users-list.component.html
+++ b/Client/src/app/admin-components/users-list/users-list.component.html
@@ -1,7 +1,7 @@
 <div class="container">
     <div class="row">
         <div class="col-12 mb-3 mb-lg-5">
-            <div class="overflow-hidden card table-nowrap table-card">
+            <div class="overflow-hidden card table-nowrap table-card " style="margin-top: 6rem;">
                 <div class="card-header d-flex justify-content-between align-items-center">
                     <h5 class="mb-0">New customers</h5>
                     <a><i class="fa fa-paw" aria-hidden="true"></i></a>
@@ -13,27 +13,31 @@
                                 <th>First Name</th>
                                 <th>Last Name</th>
                                 <th>Email</th>
-                             
-                    
+                                <th>ROLE</th>
                                 <th class="text-end">Action</th>
                             </tr>
                         </thead>
                         <tbody>
-                            <tr class="align-middle">
+                            <tr class="align-middle" *ngFor="let user of users">
                                 <td>
                                     <div class="d-flex align-items-center">
                                         <div>
-                                            <div class="h6 mb-0 lh-1">Mark</div>
+                                            <div class="h6 mb-0 lh-1">{{ user.firstName }}</div>
                                         </div>
                                     </div>
                                 </td>
-                                <td class="h6 mb-0 lh-1">Voldov</td>
-                                <td> <span class="d-inline-block align-middle">mvoges@email.com</span></td>
+                                <td class="h6 mb-0 lh-1">{{ user.lastName }}</td>
+                                <td>
+                                    <span class="d-inline-block align-middle">{{ user.email }}</span>
+                                </td>
+                                <td>
+                                    <span class="d-inline-block align-middle">{{ user.role }}</span>
+                                </td>
                                 <td class="text-end">
-                                    <div class="drodown">
+                                    <div class="dropdown">
                                         <a data-bs-toggle="dropdown" href="#" class="btn p-1" aria-expanded="false">
-                                  <i class="fa fa-bars" aria-hidden="true"></i>
-                                </a>
+                                            <i class="fa fa-bars" aria-hidden="true"></i>
+                                        </a>
                                         <div class="dropdown-menu dropdown-menu-end" style="">
                                             <a href="#!" class="dropdown-item">Delete user</a>
                                         </div>
