--- a/Client/src/app/admin-components/users-list/users-list.component.html
+++ b/Client/src/app/admin-components/users-list/users-list.component.html
@@ -38,8 +38,8 @@
                                         <a data-bs-toggle="dropdown" href="#" class="btn p-1" aria-expanded="false">
                                             <i class="fa fa-bars" aria-hidden="true"></i>
                                         </a>
-                                        <div class="dropdown-menu dropdown-menu-end" style="">
-                                            <a href="#!" class="dropdown-item">Delete user</a>
+                                        <div class="dropdown-menu dropdown-menu-end">
+                                            <a class="dropdown-item" (click)="showDeleteConfirmation(user)">Delete user</a>
                                         </div>
                                     </div>
                                 </td>
@@ -47,6 +47,23 @@
                         </tbody>
                     </table>
                 </div>
+            </div>
+        </div>
+    </div>
+</div>
+
+<div class="modal fade" data-backdrop="static" data-keyboard="false" [class.show]="isConfirmationModalOpen" id="confirmationModal" role="dialog" aria-hidden="true">
+    <div class="modal-dialog">
+        <div class="modal-content">
+            <div class="modal-header">
+                <h4 class="modal-title">Delete User Confirmation</h4>
+            </div>
+            <div class="modal-body">
+                <p>Are you sure you want to delete this user?</p>
+            </div>
+            <div class="modal-footer">
+                <button type="button" class="btn btn-link" (click)="deleteUser(userToDelete.id)">Delete</button>
+                <button type="button" class="btn btn-link" data-dismiss="modal" (click)="closeConfirmationModal() ">Cancel</button>
             </div>
         </div>
     </div>
