--- a/Client/src/app/components/signup/signup.component.html
+++ b/Client/src/app/components/signup/signup.component.html
@@ -32,7 +32,7 @@
                                   </div>
                                   <button type="submit" class="btn btn-theme">Signup</button>
                                   <p class="text-muted mt-3">
-                                      Already have an account? <a href="login.html" class="text-primary ml-1">Login</a>
+                                      Already have an account? <a routerLink="/login" class="text-primary ml-1">Login</a>
                                   </p>
                               </form>
                             </div>
