--- a/Client/src/app/components/login/login.component.html
+++ b/Client/src/app/components/login/login.component.html
@@ -23,7 +23,7 @@
                                         <input type="password" class="form-control" id="exampleInputPassword1" [(ngModel)]="password" name="password">
                                     </div>
                                     <button type="submit" class="btn btn-theme">Login</button>
-                                    <p class="text-muted mt-3 mb-0">Don't have an account? <a href="register.html" class="text-primary ml-1">Signup</a></p>
+                                    <p class="text-muted mt-3 mb-0">Don't have an account? <a routerLink="/signup" class="text-primary ml-1">Signup</a></p>
                                 </form>
                             </div>
                         </div>
