--- a/Client/src/app/components/navigation-bar/navigation-bar.component.html
+++ b/Client/src/app/components/navigation-bar/navigation-bar.component.html
@@ -1,6 +1,6 @@
 <nav class="navbar navbar-expand-lg navbar-custom ">
     <div class="container-fluid">
-      <a class="navbar-brand" href="#">
+      <a class="navbar-brand"  routerLink="">
         <i class="fa fa-paw" aria-hidden="true"></i> Pet-Store
       </a>
       <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
@@ -9,7 +9,7 @@
       <div class="collapse navbar-collapse" id="navbarNavDropdown">
         <ul class="navbar-nav">
           <li class="nav-item">
-            <a class="nav-link active" aria-current="page" href="#">Home</a>
+            <a class="nav-link active" aria-current="page"  routerLink="">Home</a>
           </li>
           <li class="nav-item dropdown">
             <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
@@ -52,11 +52,14 @@
       </form>
       </div>
       <ul class="navbar-nav ml-auto">
-        <li class="nav-item">
-          <a class="nav-link" href="#">Login</a>
+        <li class="nav-item" *ngIf="!GeneralServices.isLoggedIn()">
+          <a class="nav-link" routerLink="/login">Login</a>
         </li>
-        <li class="nav-item">
-          <a class="nav-link" href="#">Signup</a>
+        <li class="nav-item" *ngIf="!GeneralServices.isLoggedIn()">
+          <a class="nav-link" routerLink="/signup">Signup</a>
+        </li>
+        <li class="nav-item" *ngIf="GeneralServices.isLoggedIn()">
+          <a class="nav-link" routerLink="/login" (click)="AuthServices.logout()">Logout</a>
         </li>
       </ul>
     </div>
