--- a/Client/src/app/admin-components/users-list/users-list.component.html
+++ b/Client/src/app/admin-components/users-list/users-list.component.html
@@ -39,7 +39,7 @@
                                             <i class="fa fa-bars" aria-hidden="true"></i>
                                         </a>
                                         <div class="dropdown-menu dropdown-menu-end">
-                                            <a class="dropdown-item" (click)="showDeleteConfirmation(user)">Delete user</a>
+                                            <a href="#!" class="dropdown-item" (click)="deleteUser(user.id)">Delete user</a>
                                         </div>
                                     </div>
                                 </td>
@@ -47,23 +47,6 @@
                         </tbody>
                     </table>
                 </div>
-            </div>
-        </div>
-    </div>
-</div>
-
-<div class="modal fade" data-backdrop="static" data-keyboard="false" [class.show]="isConfirmationModalOpen" id="confirmationModal" role="dialog" aria-hidden="true">
-    <div class="modal-dialog">
-        <div class="modal-content">
-            <div class="modal-header">
-                <h4 class="modal-title">Delete User Confirmation</h4>
-            </div>
-            <div class="modal-body">
-                <p>Are you sure you want to delete this user?</p>
-            </div>
-            <div class="modal-footer">
-                <button type="button" class="btn btn-link" (click)="deleteUser(userToDelete.id)">Delete</button>
-                <button type="button" class="btn btn-link" data-dismiss="modal" (click)="closeConfirmationModal() ">Cancel</button>
             </div>
         </div>
     </div>
