Product list admin side fetching and style done

--- a/Client/src/app/app.component.html
+++ b/Client/src/app/app.component.html
@@ -2,10 +2,11 @@
 <app-login></app-login>
 
 
-<router-outlet></router-outlet> -->
+ -->
 <!-- <app-cards></app-cards> -->
 <app-admin-navigation-bar></app-admin-navigation-bar>
 
-<app-users-list></app-users-list>
-<!-- <app-products-list></app-products-list> -->
+<!-- <app-users-list></app-users-list> -->
+<app-products-list></app-products-list>
 <!-- <app-signup></app-signup>  -->
+<!-- <router-outlet></router-outlet> -->
