--- a/Client/src/app/admin-components/admin-home/admin-home.component.html
+++ b/Client/src/app/admin-components/admin-home/admin-home.component.html
@@ -1,4 +1,4 @@
+<!-- 
+<app-products-list></app-products-list> -->
 <app-admin-navigation-bar></app-admin-navigation-bar>
-
 <app-users-list></app-users-list>
-<app-products-list></app-products-list>
