--- a/Client/src/app/admin-components/users-list/users-list.component.html
+++ b/Client/src/app/admin-components/users-list/users-list.component.html
@@ -39,7 +39,7 @@
                                             <i class="fa fa-bars" aria-hidden="true"></i>
                                         </a>
                                         <div class="dropdown-menu dropdown-menu-end">
-                                            <a href="#!" class="dropdown-item" (click)="deleteUser(user.id)">Delete user</a>
+                                            <a class="dropdown-item" (click)="openDeleteConfirmation(user.id)">Delete user</a>
                                         </div>
                                     </div>
                                 </td>
@@ -51,3 +51,4 @@
         </div>
     </div>
 </div>
+
