--- a/Client/src/app/components/login/login.component.html
+++ b/Client/src/app/components/login/login.component.html
@@ -1,5 +1,5 @@
 <div id="main-wrapper" class="container">
-    <div class="row justify-content-center">
+    <div class="row justify-content-center" style="margin-top: 8rem;">
         <div class="col-xl-10">
             <div class="card border-0">
                 <div class="card-body p-0">
