--- a/Client/src/app/components/navigation-bar/navigation-bar.component.html
+++ b/Client/src/app/components/navigation-bar/navigation-bar.component.html
@@ -52,14 +52,14 @@
       </form>
       </div>
       <ul class="navbar-nav ml-auto">
-        <li class="nav-item" *ngIf="!GeneralServices.isLoggedIn()">
+        <li class="nav-item" *ngIf="!isLoggedIn()">
           <a class="nav-link" routerLink="/login">Login</a>
         </li>
-        <li class="nav-item" *ngIf="!GeneralServices.isLoggedIn()">
+        <li class="nav-item" *ngIf="!isLoggedIn()">
           <a class="nav-link" routerLink="/signup">Signup</a>
         </li>
-        <li class="nav-item" *ngIf="GeneralServices.isLoggedIn()">
-          <a class="nav-link" routerLink="/login" (click)="AuthServices.logout()">Logout</a>
+        <li class="nav-item" *ngIf="isLoggedIn()">
+          <a class="nav-link" routerLink="/login" (click)="logout()">Logout</a>
         </li>
       </ul>
     </div>
