--- a/Client/src/app/components/signup/signup.component.html
+++ b/Client/src/app/components/signup/signup.component.html
@@ -1,5 +1,5 @@
 <div id="main-wrapper" class="container">
-    <div class="row justify-content-center">
+    <div class="row justify-content-center" style="margin-top: 6rem;">
         <div class="col-xl-10">
             <div class="card border-0">
                 <div class="card-body p-0">
@@ -43,8 +43,9 @@
                                 <div class="overlay rounded-right"></div>
                                 <div class="account-testimonial">
                                     <h4 class="text-white mb-4"> <i class="fa fa-paw" aria-hidden="true"></i>Pet-store</h4>
-                                    <p class="lead text-white">"Best investment I made for a long time. Can only recommend it for other users."</p>
-                                    <p>- Admin User</p>
+                                    <p class="lead text-white">
+                                        "Welcome to our PET-STORE! Where every pet's happiness is our priority. Enjoy your visit!"</p>
+                                    <p>- Owner </p>
                                 </div>
                             </div>
                         </div>
