--- a/Client/src/app/components/product-list/product-list.component.html
+++ b/Client/src/app/components/product-list/product-list.component.html
@@ -18,7 +18,7 @@
                 <li><a href="#!">${{product.price}}</a></li>
               </ul>
               <ul>
-                <li><button (click)="addToCart(1,product.id)">Add to Cart</button></li>
+                <li><button (click)="addToCart(product.id)" class="btn btn-theme" >Add to Cart</button></li>
               </ul>
             </div>
           </div>
