--- a/Client/src/app/components/navigation-bar/navigation-bar.component.html
+++ b/Client/src/app/components/navigation-bar/navigation-bar.component.html
@@ -62,7 +62,7 @@
           <a class="nav-link" routerLink="/login" (click)="logout()">Logout</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="#">Cart</a>
+          <a class="nav-link" href="#" routerLink="/cart">Cart</a>
         </li>
       </ul>
     </div>
