--- a/Client/src/app/components/navigation-bar/navigation-bar.component.html
+++ b/Client/src/app/components/navigation-bar/navigation-bar.component.html
@@ -20,6 +20,7 @@
           <a
             class="nav-link active"
             aria-current="page"
+            routerLink=""
             (click)="onCategorySelected('', '')"
             >Home</a
           >
