--- a/Client/src/app/components/home-page/home-page.component.html
+++ b/Client/src/app/components/home-page/home-page.component.html
@@ -4,6 +4,6 @@
     <span class="premium text-primary">Premium</span> Pet Products
   </h1>
 </div>
-<div class="row pb-3">
+<div class="col">
   <app-product-list></app-product-list>
 </div>
