--- a/Client/src/app/components/product-list/product-list.component.css
+++ b/Client/src/app/components/product-list/product-list.component.css
@@ -1,4 +1,7 @@
-body{margin-top:20px;}
+body{
+    margin-top:20px;
+}
+
 .blog-grid {
     position: relative;
     box-shadow: 0 1rem 1.75rem 0 rgba(45, 55, 75, 0.1);
