--- a/Client/src/app/admin-components/products-list/products-list.component.html
+++ b/Client/src/app/admin-components/products-list/products-list.component.html
@@ -1,39 +1,5 @@
-<!-- <div class="container">
-    <table class="table" style="margin-top: 6rem;">
-      <thead>
-        <tr>
-          <th scope="col">Image</th>
-          <th scope="col">Item Name</th>
-          <th scope="col">Item Description</th>
-          <th scope="col">Item Price</th>
-          <th>Action</th>
-        </tr>
-      </thead>
-      <tbody>
-        <ng-container *ngFor="let product of products">
-          <tr>
-            <td>
-              <img [src]="product.imageUrl" alt="{{ product.name }}" class="item-image" />
-            </td>
-           
-            <td class="text-product">{{ product.name }}</td>
-            <td  class="text-product">{{ product.description.substring(0, 50) }}...</td>
-            <td  class="text-product">${{ product.price }}</td>
-            <td class="button-product">
-              <button class="btn black-btn btn-sm mx-1" title="Update" type="submit">
-                <i class="bi bi-pen"></i>
-              </button>
-              <button class="btn btn-danger btn-sm mx-1" title="Delete Item" type="button" (click)="deleteProduct(product.id)">
-                <i class="bi bi-trash"></i>
-              </button>
-            </td>
-          </tr>
-        </ng-container>
-      </tbody>
-    </table>
-  </div>
-   -->
-   <div class="container">
+  <div class="container">
+    <button class="button-35" role="button" style="margin-top: 6rem; margin-left: 1rem;" (click)="openModal()">Add products +</button>
     <div class="row">
         <div class="col-12 mb-3 mb-lg-5">
             <div class="overflow-hidden card table-nowrap table-card " style="margin-top: 6rem;">
@@ -72,7 +38,7 @@
                                     <button class="btn black-btn btn-sm mx-1" title="Update" type="submit">
                                       <i class="bi bi-pen"></i>
                                     </button>
-                                    <button class="btn btn-danger btn-sm mx-1" title="Delete Item" type="button" (click)="deleteProduct(product.id)">
+                                    <button class="btn btn-danger btn-sm mx-1" title="Delete Item" type="button" (click)="openDeleteConfirmation(product.id)">
                                       <i class="bi bi-trash"></i>
                                     </button>
                                   </td>
