--- a/Client/src/app/admin-components/users-list/users-list.component.html
+++ b/Client/src/app/admin-components/users-list/users-list.component.html
@@ -3,7 +3,7 @@
         <div class="col-12 mb-3 mb-lg-5">
             <div class="overflow-hidden card table-nowrap table-card " style="margin-top: 6rem;">
                 <div class="card-header d-flex justify-content-between align-items-center">
-                    <h5 class="mb-0">New customers</h5>
+                    <h5 class="mb-0">Users list</h5>
                     <a><i class="fa fa-paw" aria-hidden="true"></i></a>
                 </div>
                 <div class="table-responsive">
