search feature implemented

--- a/Client/src/app/components/cards/cards.component.css
+++ b/Client/src/app/components/cards/cards.component.css
@@ -258,3 +258,10 @@ a:focus {
   display: grid;
   justify-content: center;
 }
+.productDesc {
+  overflow: hidden;
+  text-overflow: ellipsis;
+  display: -webkit-box;
+  -webkit-line-clamp: 4;
+  -webkit-box-orient: vertical;
+}
