--- a/Client/src/app/components/navigation-bar/navigation-bar.component.html
+++ b/Client/src/app/components/navigation-bar/navigation-bar.component.html
@@ -53,7 +53,8 @@
           <div class="col-12">
             <div class="row no-gutters">
               <div class="col-lg-8 col-md-6 col-sm-12 p-0">
-                <input type="text" placeholder="Search..." class="form-control" id="search" name="search" />
+                <input type="text" placeholder="Search..." class="form-control" id="search" name="search"
+                  [(ngModel)]="searchedValue" (input)="onSearch()" />
               </div>
               <div class="col-lg-1 col-md-3 col-sm-12 p-0">
                 <button type="submit" class="btn btn-base">
