delete product done

--- a/Client/src/app/app.component.html
+++ b/Client/src/app/app.component.html
@@ -10,4 +10,5 @@
 <!-- <app-product-list></app-product-list> -->
 <!-- <app-signup></app-signup>  -->
 <!-- <app-cart></app-cart> -->
-<router-outlet></router-outlet>
+<!-- <router-outlet></router-outlet> -->
+<app-chekout></app-chekout>
