--- a/Client/src/app/components/cart/cart.component.css
+++ b/Client/src/app/components/cart/cart.component.css
@@ -239,3 +239,11 @@ select.form-control {
   height: 100%;
   object-fit: cover;
 }
+#center {
+    margin: 0;
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    -ms-transform: translate(-50%, -50%);
+    transform: translate(-50%, -50%);
+  }
