--- a/Client/src/app/components/cart/cart.component.html
+++ b/Client/src/app/components/cart/cart.component.html
@@ -2,7 +2,7 @@
 <div class="container padding-bottom-3x mb-1">
    
     <!-- Shopping Cart-->
-    <div class="table-responsive shopping-cart" style="margin-top: 8rem;">
+    <div class="table-responsive shopping-cart" style="margin-top: 8rem;" >
         <table class="table">
             <thead>
                 <tr>
@@ -12,7 +12,7 @@
                     <th class="text-center">Unit Price </th>
                    
                     <th class="text-center">
-                        <button (click)="removeAllFromCart(items.id)" class="btn btn-sm btn-outline-danger" >Clear Cart
+                        <button (click)="removeAllFromCart()" class="btn btn-sm btn-outline-danger" >Clear Cart
                         </button>
                     </th>
                 </tr>
@@ -58,7 +58,10 @@
     </div>
     
     <div class="shopping-cart-footer">
-        <div class="column"><a class="btn btn-outline-secondary" href="#"><i class="icon-arrow-left"></i>&nbsp;Back to Shopping</a></div>
+        <div class="column"><a class="btn btn-outline-secondary" href=""><i class="icon-arrow-left"></i>&nbsp;check out </a></div>
+        <div class="column" ><a class="btn btn-outline-secondary" href="#"><i  id="center"></i>&nbsp;Back to Shopping</a></div>
+      
 
     </div>
+    
 </div>
