--- a/Client/src/app/admin-components/add-products/add-products.component.html
+++ b/Client/src/app/admin-components/add-products/add-products.component.html
@@ -12,7 +12,7 @@
   ></button>
 </div>
 <div class="modal-body">
-  <form #productForm="ngForm">
+  <form>
     <div class="mb-3">
       <label for="productName" class="form-label">Product Name</label>
       <input
