--- a/Client/src/app/app.component.html
+++ b/Client/src/app/app.component.html
@@ -4,9 +4,9 @@
 
  --> 
 <!-- <app-cards></app-cards> -->
-<app-admin-navigation-bar></app-admin-navigation-bar>
+<!-- <app-admin-navigation-bar></app-admin-navigation-bar> -->
 
 <!-- <app-users-list></app-users-list> -->
-<app-products-list></app-products-list>
+<!-- <app-products-list></app-products-list> -->
 <!-- <app-signup></app-signup>  -->
-<!-- <router-outlet></router-outlet> -->
+<router-outlet></router-outlet>
