--- a/Client/src/app/admin-components/admin-navigation-bar/admin-navigation-bar.component.html
+++ b/Client/src/app/admin-components/admin-navigation-bar/admin-navigation-bar.component.html
@@ -9,10 +9,10 @@
         <div class="collapse navbar-collapse" id="navbarNavDropdown">
             <ul class="navbar-nav">
                 <li class="nav-item">
-                    <a class="nav-link active" aria-current="page"routerLink="admin-productsList">Products list</a>
+                    <a class="nav-link active" aria-current="page" routerLink="/admin-productsList">Products list</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link active" aria-current="page" routerLink="admin-usersList">Users list</a>
+                    <a class="nav-link active" aria-current="page" routerLink="/admin-usersList">Users list</a>
                 </li>
             </ul>
         </div>
@@ -20,7 +20,7 @@
         </div>
         <ul class="navbar-nav ml-auto">
             <li class="nav-item">
-                <a class="nav-link" (click)="logout">Logout</a>
+                <a class="nav-link" (click)="logout()">Logout</a>
             </li>
         </ul>
     </div>
