--- a/Client/src/app/admin-components/admin-navigation-bar/admin-navigation-bar.component.html
+++ b/Client/src/app/admin-components/admin-navigation-bar/admin-navigation-bar.component.html
@@ -1,7 +1,7 @@
 <nav class="navbar navbar-expand-lg navbar-custom">
     <div class="container-fluid">
         <a class="navbar-brand" href="#">
-            <i class="fa fa-paw" aria-hidden="true"></i> Pet-Store-Admin
+            <i class="fa fa-paw" aria-hidden="true" routerLink="/admin-home" ></i> Pet-Store-Admin
         </a>
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
@@ -20,7 +20,7 @@
         </div>
         <ul class="navbar-nav ml-auto">
             <li class="nav-item">
-                <a class="nav-link" (click)="logout()">Logout</a>
+                <a class="nav-link active" (click)="logout()" style="cursor: pointer;">Logout</a>
             </li>
         </ul>
     </div>
