--- a/Client/src/app/components/navigation-bar/navigation-bar.component.html
+++ b/Client/src/app/components/navigation-bar/navigation-bar.component.html
@@ -1,5 +1,5 @@
 <nav class="navbar navbar-expand-lg navbar-custom">
-  <div class="container-fluid">
+  <div class="container-fluid p-0">
     <a class="navbar-brand" routerLink="">
       <i class="fa fa-paw" aria-hidden="true"></i> Pet-Store
     </a>
