--- a/Client/src/app/admin-components/update-product/update-product.component.html
+++ b/Client/src/app/admin-components/update-product/update-product.component.html
@@ -3,22 +3,24 @@
 
         <div class="modal-header">
             <h5 class="modal-title" id="exampleModalLabel">Update Product</h5>
-            <button type="button" class="btn-close" aria-label="Close"></button>
+            <button type="button" class="btn-close" aria-label="Close" (click)="cancelUpdate()"></button>
         </div>
         <div class="modal-body">
             <form>
                 <div class="mb-3">
                     <label for="productName" class="form-label">Product Name</label>
-                    <input type="text" class="form-control" id="productName" name="productName" required />
+                    <input type="text" class="form-control" id="productName" name="productName"
+                        [(ngModel)]="selectedProduct.name" required />
                 </div>
                 <div class="mb-3">
                     <label for="productDescription" class="form-label">Product Description</label>
                     <textarea class="form-control" id="productDescription" name="productDescription"
-                        required></textarea>
+                        [(ngModel)]="selectedProduct.description" required></textarea>
                 </div>
                 <div class="mb-3">
                     <label for="productPrice" class="form-label">Product Price</label>
-                    <input type="number" class="form-control" id="productPrice" name="productPrice" required />
+                    <input type="number" class="form-control" id="productPrice" name="productPrice"
+                        [(ngModel)]="selectedProduct.price" required />
                 </div>
                 <div class="mb-3">
                     <label for="animalType" class="form-label">Select Animal Type</label>
@@ -42,13 +44,8 @@
             </form>
         </div>
         <div class="modal-footer">
-            <button type="button" class="btn btn-secondary">
-                Close
-            </button>
-            <button type="button" class="btn btn-primary">
-                Update
-            </button>
-
+            <button class="btn btn-lg btn-primary px-3" (click)="cancelUpdate()">CANCEL</button>
+            <button class="btn btn-lg btn-primary px-3" (click)="updateProduct()">UPDATE</button>
         </div>
     </div>
 </div>
