--- a/Client/src/app/admin-components/update-product/update-product.component.html
+++ b/Client/src/app/admin-components/update-product/update-product.component.html
@@ -8,38 +8,39 @@
         <div class="modal-body">
             <form>
                 <div class="mb-3">
-                    <label for="productName" class="form-label">Product Name</label>
-                    <input type="text" class="form-control" id="productName" name="productName"
-                        [(ngModel)]="selectedProduct.name" required />
+                    <label for="name" class="form-label">Product Name</label>
+                    <input type="text" class="form-control" id="name" name="name" [(ngModel)]="selectedProduct.name"
+                        required />
                 </div>
                 <div class="mb-3">
-                    <label for="productDescription" class="form-label">Product Description</label>
-                    <textarea class="form-control" id="productDescription" name="productDescription"
+                    <label for="description" class="form-label">Product Description</label>
+                    <textarea class="form-control" id="description" name="description"
                         [(ngModel)]="selectedProduct.description" required></textarea>
                 </div>
                 <div class="mb-3">
-                    <label for="productPrice" class="form-label">Product Price</label>
-                    <input type="number" class="form-control" id="productPrice" name="productPrice"
+                    <label for="price" class="form-label">Product Price</label>
+                    <input type="number" class="form-control" id="price" name="price"
                         [(ngModel)]="selectedProduct.price" required />
                 </div>
                 <div class="mb-3">
-                    <label for="animalType" class="form-label">Select Animal Type</label>
-                    <select class="form-select" id="animalType" name="animalType" required>
+                    <label for="animal" class="form-label">Select Animal Type</label>
+                    <select class="form-select" id="animal" name="animal" required>
                         <option value="Dog">Dog</option>
                         <option value="Cat">Cat</option>
                     </select>
                 </div>
                 <div class="mb-3">
-                    <label for="animalType" class="form-label">Select Category</label>
-                    <select class="form-select" id="animalType" name="animalType" required>
+                    <label for="category" class="form-label">Select Category</label>
+                    <select class="form-select" id="category" name="category" required>
                         <option value="Dog">Food</option>
                         <option value="Cat">Toy</option>
                         <option value="Cat">Upholstery</option>
                     </select>
                 </div>
                 <div class="mb-3">
-                    <label for="productImage" class="form-label">Update the Product Image</label>
-                    <input type="file" class="form-control" id="productImage" name="productImage" />
+                    <label for="imageUrl" class="form-label">Update the Product Image</label>
+                    <input type="file" class="form-control" id="imageUrl" name="imageUrl"
+                        (change)="handleImage($event)" />
                 </div>
             </form>
         </div>
