--- a/Client/src/app/components/cards/cards.component.css
+++ b/Client/src/app/components/cards/cards.component.css
@@ -1,9 +1,11 @@
 body {
   margin-top: 20px;
+  
 }
+
 .blog-grid {
   position: relative;
-  box-shadow: 0 1rem 1.75rem 0 rgba(45, 55, 75, 0.1);
+  box-shadow: 0 4px 6px rgba(0, 0, 0, 0.2);
   max-width: 100%;
   height: 100%;
   border: 0.0625rem solid rgba(220, 224, 229, 0.6);
@@ -246,17 +248,13 @@ a:focus {
   background-position: center;
 }
 .checkout-button {
-  background-color: rgb(255, 192, 231);
-  color: #fff;
-
-  padding: 10px 20px;
-
-  cursor: pointer;
-  margin: auto;
-  align-items: center;
+  background-color: rgb(255, 255, 255);
+  color: #000000;
+border: transparent !important;
+  padding: 5px 20px;
+margin-left: 200px;
+  cursor: pointer;  
   display: flex;
-  display: grid;
-  justify-content: center;
 }
 .productDesc {
   overflow: hidden;
