--- a/Client/src/app/components/cards/cards.component.html
+++ b/Client/src/app/components/cards/cards.component.html
@@ -1,23 +1,5 @@
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.13.1/css/all.min.css"
   integrity="sha256-2XFplPlrFClt0bIdPgpz8H7ojnk10H69xRqd9+uTShA=" crossorigin="anonymous" />
-
-  <!-- <div class="row mt-3 justify-content-center"> 
-    <div *ngFor="let product of filteredProducts" class="col-md-6 col-lg-4 mt-3 wow fadeInUp">
-      <div class="blog-grid" style="max-width: 80%;"> 
-        <div class="blog-grid-img  mt-3"> 
-          <img [src]="product.imageUrl" alt="" class="img-fluid" (click)="openModal(product)" />
-        </div>
-        <div class="blog-grid-text p-4"> 
-          <h3 class="h6 mb-2" (click)="openModal(product)">{{ product.name }}</h3>
-          <p class="display-30 productDesc">{{ product.description}}</p>
-          <ul>
-            <li>${{ product.price }}</li>
-            <li><button (click)="addToCart(product.id)" class="checkout-button">Add to cart</button></li>
-          </ul>
-        </div>
-      </div>
-    </div>
-  </div> -->
   <div class="container">
     <div class="row mt-3">
         <div *ngFor="let product of filteredProducts" class="col-md-4 mt-5 wow fadeInUp"data-wow-delay=".2s" style="visibility: visible; animation-delay: 0.2s; animation-name: fadeInUp;">
@@ -29,7 +11,7 @@
                     <div class="meta meta-style2">
                         <ul>
                           <li>${{ product.price }}</li>
-                          <li><button (click)="addToCart(product.id)" class="checkout-button">Add to cart</button></li>
+                          <li><button (click)="addToCart(product.id)" class="checkout-button" *ngIf="isLoggedIn()">Add to cart</button></li>
                         </ul>
                     </div>
 
