--- a/Client/src/app/components/home-page/home-page.component.html
+++ b/Client/src/app/components/home-page/home-page.component.html
@@ -1,10 +1,8 @@
-<div class="d-flex flex-column text-center mb-5">
+<div class=" d-flex flex-column text-center mb-5">
   <app-navigation-bar (categorySelected)="onCategorySelected($event)"
     (searchQuery)="onSearch($event)"></app-navigation-bar>
-  <h1 class="display-4 m-0 py-5">
-    <span class="premium text-primary">Premium</span> Pet Products
-  </h1>
+
 </div>
-<div class="row pb-3">
+<div class="">
   <app-cards [selectedCategory]="selectedCategory" [searchTerm]="searchTerm"></app-cards>
 </div>
