--- a/Client/src/app/components/login/login.component.html
+++ b/Client/src/app/components/login/login.component.html
@@ -1,7 +1,7 @@
 <div id="main-wrapper" class="container">
     <div class="row justify-content-center" style="margin-top: 6rem;">
         <div class="col-xl-10">
-            <div class="card border-0">
+            <div class="card border-0" style="box-shadow: 0 4px 6px rgba(0, 0, 0, 0.5);">
                 <div class="card-body p-0">
                     <div class="row no-gutters">
                         <div class="col-lg-6">
@@ -30,6 +30,7 @@
 
                         <div class="col-lg-6 d-none d-lg-inline-block">
                             <div class="account-block rounded-right">
+                                <div class="slideshow">
                                 <div class="overlay rounded-right"></div>
                                 <div class="account-testimonial">
                                     <h4 class="text-white mb-4"> <i class="fa fa-paw" aria-hidden="true"></i>Pet-store</h4>
@@ -38,17 +39,14 @@
                                 </div>
                             </div>
                         </div>
+                        </div>
                     </div>
 
                 </div>
                 <!-- end card-body -->
             </div>
             <!-- end card -->
-
-           
-
             <!-- end row -->
-
         </div>
         <!-- end col -->
     </div>
