--- a/Client/src/app/components/signup/signup.component.html
+++ b/Client/src/app/components/signup/signup.component.html
@@ -1,7 +1,7 @@
 <div id="main-wrapper" class="container">
     <div class="row justify-content-center" style="margin-top: 6rem;">
         <div class="col-xl-10">
-            <div class="card border-0">
+            <div class="card border-0" style="box-shadow: 0 4px 6px rgba(0, 0, 0, 0.5);">
                 <div class="card-body p-0">
                     <div class="row no-gutters">
                         <div class="col-lg-6">
