--- a/Client/src/app/components/navigation-bar/navigation-bar.component.css
+++ b/Client/src/app/components/navigation-bar/navigation-bar.component.css
@@ -1,3 +1,27 @@
 .navbar-custom {
     background-color: rgb(178, 175, 175);
 }
+.cart-icon {
+    position: relative;
+    cursor: pointer;
+    display: flex;
+    align-items: center;
+    color: black;
+  }
+  
+  .cart-icon .fas {
+    font-size: 24px; /* Adjust the icon size as needed */
+    margin-right: 8px; /* Add some spacing between the icon and badge */
+    
+  }
+  .cart-icon .badge {
+    position: absolute;
+    top: -8px;
+    right: -8px;
+    background-color: rgba(255, 72, 0, 0.952);
+    color: white;
+    border-radius: 50%;
+    padding: 4px 8px;
+    font-size: 12px;
+  }
+  
