--- a/Client/src/app/components/chekout/chekout.component.css
+++ b/Client/src/app/components/chekout/chekout.component.css
@@ -62,10 +62,66 @@ body{
 .button-73:active {
   transform: scale(1.025);
 }
-
+#modal-overlay {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100vw;
+  height: 100%;
+  background: rgba(0, 0, 0, 0.5); 
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  z-index: 99999999; 
+}
+.modal-container {
+  width: 75%;
+  padding-left: 15%;
+  margin-top: auto;
+  margin-bottom: auto;
+}
+.modal-backdrop {
+  position: absolute;
+  top:0;
+  right:0;
+  left: 0;
+  bottom: 0;
+  background-color: transparent;
+  z-index: -1;
+}
+.modal-close {
+ display: flex;
+ flex-direction: row-reverse;
+ padding-right: 25%;
+}
 @media (min-width: 768px) {
   .button-73 {
     font-size: 1rem;
     padding: .75rem 2rem;
   }
+  .custom-check-icon {
+    font-size: 48px;
+    color: green;
+    margin: 0 auto; 
+    line-height: 1.5; 
+  }
+  .overlay {
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background: rgba(0, 0, 0, 0.7); 
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    z-index: 2; 
+  }
+  
+  
+  
+  
+  
+  
+
 }
