--- a/Client/src/app/components/chekout/chekout.component.html
+++ b/Client/src/app/components/chekout/chekout.component.html
@@ -1,5 +1,9 @@
-<div class="container" >
-    <h1 class="h3 mb-5">Payment</h1>
+<div id="modal-overlay"  >
+  <div class="modal-container">
+   <div class="modal-close"> 
+   
+    <button class="btn  " (click)="closeModal()"><i class="fa fa-close"></i></button>
+    </div>
     <div class="row">
       <!-- Left -->
       <div class="col-lg-9">
@@ -22,35 +26,44 @@
                 </svg>
               </span>
             </h2>
-            <div id="collapseCC" class="accordion-collapse collapse show" data-bs-parent="#accordionPayment" style="">
+            <div id="collapseCC" class="accordion-collapse collapse show" data-bs-parent="#accordionPayment" >
               <div class="accordion-body">
                 <div class="mb-3">
                   <label class="form-label">Card Number</label>
-                  <input type="text" class="form-control" placeholder="">
+                  <input type="text" class="form-control" placeholder="" required>
                 </div>
                 <div class="row">
                   <div class="col-lg-6">
                     <div class="mb-3">
                       <label class="form-label">Name on card</label>
-                      <input type="text" class="form-control" placeholder="">
+                      <input type="text" class="form-control" placeholder="" required>
                     </div>
                   </div>
                   <div class="col-lg-3">
                     <div class="mb-3">
                       <label class="form-label">Expiry date</label>
-                      <input type="text" class="form-control" placeholder="MM/YY">
+                      <input type="text" class="form-control" placeholder="MM/YY" required>
                     </div>
                   </div>
                   <div class="col-lg-3">
                     <div class="mb-3">
                       <label class="form-label">CVV Code</label>
-                      <input type="password" class="form-control">
+                      <input type="password" class="form-control" required >
                     </div>
                   </div>
                   <div>
-                    <button type="button"  class="button-73">
+                    <button type="button"  class="button-73"(click)="confirmPayment()" [disabled]="!confirmationForm.valid || loading">
                         Confirm
                     </button>
+                   
+                    <div class="overlay" *ngIf="loading" >
+                      <div class="modal-close"  > 
+                      <i class="fa fa-spinner fa-spin loading-icon" style="font-size: 48px;" (click)="closeModal()"></i>
+                    </div>
+                    <div class="overlay" *ngIf="paymentConfirm && !loading">
+                      <i class="fa fa-check check-icon" style="font-size: 48px; color: green;"></i>
+                    </div>
+                  </div>
                 </div>
                 </div>
               </div>
@@ -65,9 +78,15 @@
                  On Delivery
                 </label>
               </div>
+              <div class="overlay" *ngIf="loading">
+                <i class="fa fa-spinner fa-spin loading-icon" style="font-size: 48px;"></i>
+              </div>
+              <div class="overlay" *ngIf="paymentConfirm && !loading">
+                <i class="fa fa-check check-icon" style="font-size: 48px; color: green;"></i>
+              </div>
             
             </h2>
-            <div id="collapsePP" class="accordion-collapse collapse" data-bs-parent="#accordionPayment" style="">
+            <div id="collapsePP" class="accordion-collapse collapse" data-bs-parent="#accordionPayment" >
               <div class="accordion-body">
                 <div class="px-2 col-lg-6 mb-3">
                   <label class="form-label">Full Name</label>
@@ -80,16 +99,23 @@
                   <input type="email" class="form-control">
                 </div>
                 <div>
-                    <button type="button" class="button-73">
-                        Confirm
-                    </button>
-                </div>
+                  <button type="button"  class="button-73"(click)="confirmPayment()">
+                      Confirm
+                  </button>
+                  <div class="overlay" *ngIf="loading">
+                    <i class="fa fa-spinner fa-spin loading-icon" style="font-size: 48px;"></i>
+                  </div>
+                  <div class="overlay" *ngIf="paymentConfirm && !loading">
+                    <i class="fa fa-check check-icon" style="font-size: 48px; color: green;"></i>
+                  </div>
+              </div>
               </div>
             </div>
           </div>
         </div>
       </div>
      
+    </div>
     </div>
 </div>
 
