--- a/Client/src/app/components/chekout/chekout.component.css
+++ b/Client/src/app/components/chekout/chekout.component.css
@@ -111,17 +111,27 @@ body{
     left: 0;
     width: 100%;
     height: 100%;
-    background: rgba(0, 0, 0, 0.7); 
+    background: rgba(0, 0, 0, 0.425); 
     display: flex;
     justify-content: center;
     align-items: center;
     z-index: 2; 
   }
+  @keyframes rotate {
+    0% {
+      transform: rotate(0deg);
+    }
+    100% {
+      transform: rotate(360deg);
+    }
+  }
   
-  
-  
-  
-  
-  
-
+  @keyframes fadeIn {
+    0% {
+      opacity: 0;
+    }
+    100% {
+      opacity: 1;
+    }
+  }
 }
