--- a/Client/src/app/components/chekout/chekout.component.html
+++ b/Client/src/app/components/chekout/chekout.component.html
@@ -61,7 +61,7 @@
                       <i class="fa fa-spinner fa-spin loading-icon" style="font-size: 48px;" (click)="closeModal()"></i>
                     </div>
                     <div class="overlay" *ngIf="paymentConfirm && !loading">
-                      <i class="fa fa-check check-icon" style="font-size: 48px; color: green;"></i>
+                      <i class="fa fa-check check-icon" style="font-size: 48px; color: green; animation: rotate 2s linear"></i>
                     </div>
                   </div>
                 </div>
